mitosheet: fix bug with deleting index column, make sheet invisible when it shouldn't be displayed

--- a/mitosheet/css/mito.css
+++ b/mitosheet/css/mito.css
@@ -64,10 +64,12 @@
 
 .mito-formula-bar-and-mitosheet-div-narrow-taskpane-open {
     width: calc(100% - var(--taskpane-width));
+    visibility: visible;
 }
 
 .mito-formula-bar-and-mitosheet-div-fullscreen-taskpane-open {
     width: 0%;
+    visibility: none;
 }
 
 .mito-default-fullscreen-taskpane-open {
